[gd_scene load_steps=9 format=3 uid="uid://danknk0tngaei"]

[ext_resource type="Script" uid="uid://ccvk0guxkrjt7" path="res://scripts/customer_info.gd" id="1_gp64s"]
[ext_resource type="Texture2D" uid="uid://1uyth4ibddmo" path="res://assets/sprites/customer_info.png" id="2_07xkx"]
[ext_resource type="FontFile" uid="uid://wmid7cbtl5br" path="res://assets/fonts/RulerGold.otf" id="3_07xkx"]
[ext_resource type="FontFile" uid="uid://quoywp2m68kn" path="res://assets/fonts/CompassGold.otf" id="4_0o4lw"]
[ext_resource type="Texture2D" uid="uid://c586anala5q2f" path="res://assets/sprites/gold.png" id="4_07xkx"]
[ext_resource type="Texture2D" uid="uid://f4pqqupic6kc" path="res://assets/sprites/customer_info_sword_placeholder.png" id="5_0o4lw"]
[ext_resource type="Texture2D" uid="uid://b03jai0j5254p" path="res://assets/sprites/customer_info_armor_placeholder.png" id="6_0o4lw"]
[ext_resource type="Texture2D" uid="uid://b5fhuhcktl7vn" path="res://assets/sprites/customer_info_potion_placeholder.png" id="7_vb5y5"]

[node name="CustomerInfo" type="ColorRect"]
custom_minimum_size = Vector2(200, 250)
offset_right = 200.0
offset_bottom = 250.0
mouse_filter = 2
color = Color(0.16000003, 0.6920001, 1, 0)
script = ExtResource("1_gp64s")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(200, 250.06)
layout_mode = 1
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_07xkx")
region_rect = Rect2(0, 0, 100, 150)
patch_margin_left = 8
patch_margin_top = 39
patch_margin_right = 55
patch_margin_bottom = 85

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -0.00010681152
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3529412, 0.70980394, 0.32156864, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("3_07xkx")
theme_override_font_sizes/font_size = 16
text = "Customer name"
horizontal_alignment = 1

[node name="Attributes" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 3

[node name="StrLabel" type="Label" parent="MarginContainer/VBoxContainer/Attributes"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9529412, 0.65882355, 0.2, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("4_0o4lw")
theme_override_font_sizes/font_size = 16
text = "STR 1"
horizontal_alignment = 1

[node name="ConLabel" type="Label" parent="MarginContainer/VBoxContainer/Attributes"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6745098, 0.15686275, 0.2784314, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0o4lw")
theme_override_font_sizes/font_size = 16
text = "CON 1"
horizontal_alignment = 1

[node name="DexLabel" type="Label" parent="MarginContainer/VBoxContainer/Attributes"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.6156863, 0.9019608, 0.30588236, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0o4lw")
text = "DEX 1"
horizontal_alignment = 1

[node name="IntLabel" type="Label" parent="MarginContainer/VBoxContainer/Attributes"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.21176471, 0.77254903, 0.95686275, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0o4lw")
text = "INT 1"
horizontal_alignment = 1

[node name="WisLabel" type="Label" parent="MarginContainer/VBoxContainer/Attributes"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.78431374, 0.47058824, 0.6862745, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0o4lw")
text = "WIS 1"
horizontal_alignment = 1

[node name="ChaLabel" type="Label" parent="MarginContainer/VBoxContainer/Attributes"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 0.63529414, 0.6745098, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_0o4lw")
text = "CHA 1"
horizontal_alignment = 1

[node name="Traits" type="HFlowContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ExampleTrait1" type="Label" parent="MarginContainer/VBoxContainer/Traits"]
layout_mode = 2
size_flags_horizontal = 3
text = "trait one"
horizontal_alignment = 1

[node name="ExampleTrait2" type="Label" parent="MarginContainer/VBoxContainer/Traits"]
layout_mode = 2
size_flags_horizontal = 3
text = "trait two"
horizontal_alignment = 1

[node name="ExampleTrait3" type="Label" parent="MarginContainer/VBoxContainer/Traits"]
layout_mode = 2
size_flags_horizontal = 3
text = "trait three"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="WeaponSlot" type="TextureRect" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("5_0o4lw")
expand_mode = 1
stretch_mode = 4

[node name="ArmorSlot" type="TextureRect" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("6_0o4lw")
expand_mode = 1
stretch_mode = 4

[node name="ItemSlot1" type="TextureRect" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("7_vb5y5")
expand_mode = 1
stretch_mode = 4

[node name="ItemSlot2" type="TextureRect" parent="MarginContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 6
texture = ExtResource("7_vb5y5")
expand_mode = 1
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("4_07xkx")
expand_mode = 3
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "100"
horizontal_alignment = 1
